llvm/test/tools/llubi/store_capture_provenance.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define ptr @address_read_provenance(ptr captures(address, read_provenance) %p) {
  ret ptr %p
}

@g = global i8 0

define void @main() {
  %g_address_read_provenance = call ptr @address_read_provenance(ptr @g)
  store i8 1, ptr %g_address_read_provenance
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Entering function: address_read_provenance
; CHECK-NEXT:   ptr %p = ptr 0x8 [@g]
; CHECK-NEXT:   ret ptr %p
; CHECK-NEXT: Exiting function: address_read_provenance
; CHECK-NEXT:   %g_address_read_provenance = call ptr @address_read_provenance(ptr @g) => ptr 0x8 [@g address, read_provenance]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i8 1, ptr %g_address_read_provenance, align 1 at @main <stdin>:12
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
